# Advent-of-Code

./: .gitignore  README.md
2015/: Cargo.toml
2015/src/: common.rs
2022/: Cargo.toml  README.md
2022/src/: common.rs  lib.rs
2022/src/nox/: day1_nox.rs  mod.rs
2023/: Cargo.toml
2023/src/: common.rs  lib.rs
2024/: Cargo.toml
2024/rust/: Cargo.toml
2024/rust/src/: common.rs
2024/src/: common.rs  grids.rs  lib.rs
2024/test_inputs/: day03.txt
2024/zig/.zig-cache/o/240494b2b4d7e9cd6f83f5473cd75297/: zig
2024/zig/.zig-cache/o/253c0fa47577098fe1b35e7e6fa5c817/: zig
2024/zig/src/: day01.zig  main.zig
