[package]
    authors     = ["Riven Skaye // Martin <riven@tae.moe>"]
    description = "Solutions for as far as I'll get with the AoC 2015."
    edition     = "2021"
    license     = "MIT"
    name        = "aoc2015"
    version     = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    mimalloc = {version = "^0.1", default-features = false}
    md-5 = "0.10"