[package]
name    = "AoC_2022"
version = "0.1.0"
edition = "2021"
authors = "Riven Skaye // Martin <riven@tae.moe>"
rust-version = "1.65.0"
description = "Solutions for as far as I'll get with the AoC 2022. Might end up doing several langs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
