[package]
    authors      = ["Riven Skaye // Martin <riven@tae.moe>"]
    description  = "Solutions for as far as I'll get with the AoC 2022. Might end up doing several langs."
    edition      = "2021"
    license      = "MIT"
    name         = "aoc2022"
    rust-version = "1.65.0"
    version      = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
