[package]
    edition = "2021"
    name    = "aoc2024"
    version = "0.1.0"

[dependencies]
    # No default features because we don't need mimalloc to add overhead
    # guaranteeing the same memory safety that Rust enforces by design.
    mimalloc = { version = "^0.1", default-features = false }
